# wick-rs

./: Cargo.toml  README.md
examples/: README.md  getting_started.rs  snapshot_support.rs
src/: lib.rs
src/api/: client.rs  config.rs  error.rs  mod.rs  request.rs
src/api/client/: error.rs  mod.rs
src/models/: balloon.rs  balloon_stats.rs  balloon_stats_update.rs  balloon_update.rs  boot_source.rs  cpu_config.rs  cpu_template.rs  drive.rs  entropy_device.rs  error.rs  firecracker_version.rs  full_vm_configuration.rs  instance_action_info.rs  instance_info.rs  logger.rs  machine_configuration.rs  memory_backend.rs  metrics.rs  mmds_config.rs  mod.rs  network_interface.rs  network_override.rs  partial_drive.rs  partial_network_interface.rs  rate_limiter.rs  snapshot_create_params.rs  snapshot_load_params.rs  token_bucket.rs  vm.rs  vsock.rs
