[package]
name = "wick"
version = "0.0.4-1.12.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
edition = "2021"
description = "An unofficial client crate for Firecracker, somewhat based on the OpenAPI-generated client."
readme = "README.md"
repository = "https://github.com/ckatsak/wick-rs/"
license = "Apache-2.0"
rust-version = "1.75.0"

[dependencies]
compact_str = "0.9"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.11", features = ["client-legacy", "http1"] }
hyperlocal = { version = "0.9.1", default-features = false, features = ["client"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1.41"
